name:                iso8601-timestamp
version:             0.1.0.0
synopsis:            Implementation of ISO 8601-1:2019 and ISO 8601-2:2019
description:         Implementation of ISO 8601-1:2019 and ISO 8601-2:2019
homepage:            https://github.com/duncanguthrie/iso8601-timestamp#readme
license:             BSD3
license-file:        LICENSE
author:              Duncan Guthrie
maintainer:          dguthrie@posteo.net
copyright:           Duncan Guthrie
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  
  exposed-modules:     Data.Time.ISO8601
                     , Data.Time.ISO8601.Extended
                     , Data.Time.ISO8601.Lens
  other-modules:       Data.Time.ISO8601.Extended.Internal
                     , Data.Time.ISO8601.Extended.Parse
                     , Data.Time.ISO8601.Format
                     , Data.Time.ISO8601.Internal
                     , Data.Time.ISO8601.Parse
                     , Data.Time.ISO8601.TH
  default-language:    Haskell2010
  build-depends:       base              >= 4.7     && < 5
                     , digits            >= 0.3.1   && < 0.4
                     , hspec             >= 2.7     && < 2.8
                     , microlens         >= 0.4.10  && < 0.5
                     , microlens-th      >= 0.4.2.3 && < 0.5
                     , QuickCheck        >= 2.13.2  && < 2.14
                     , regex-applicative >= 0.3.3   && < 0.4
                     , template-haskell  >= 2.14    && < 2.15
                     , time              >= 1.9.3   && < 2

test-suite iso8601-timestamp-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Base
                     , Extended
  build-depends:       base              >= 4.7     && < 5
                     , hspec             >= 2.7     && < 2.8
                     , hspec-core        >= 2.7.1   && < 2.8
                     , iso8601-timestamp >= 0.1.0.0 && < 0.2
                     , microlens         >= 0.4.10  && < 0.5
                     , QuickCheck        >= 2.13.2  && < 2.14
                     , regex-applicative >= 0.3.3   && < 0.4
                     , time              >= 1.9.3   && < 2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010